Remove background-color to ensure image visibility

--- a/css/hero.css
+++ b/css/hero.css
@@ -9,7 +9,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-color: antiquewhite;
 }
 #hero > h1 {
   font-family: "playfair Display";
